# otus_cpp_course

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  button_8cpp.html  button_8cpp__incl.map  button_8cpp__incl.md5  button_8h.html  button_8h__dep__incl.map  button_8h__dep__incl.md5  button_8h__incl.map  button_8h__incl.md5  button_8h_source.html  classButton-members.html  classButton.html  classButton__coll__graph.map  classButton__inherit__graph.md5  classController_1_1IController-members.html  classController_1_1IController.html  classController_1_1IController__coll__graph.map  classController_1_1IController__coll__graph.md5  classController_1_1IController__inherit__graph.map  classController_1_1IController__inherit__graph.md5  classController_1_1Logic-members.html  classController_1_1Logic.html  classController_1_1Logic__coll__graph.map  classController_1_1Logic__coll__graph.md5  classController_1_1Logic__inherit__graph.map  classController_1_1Logic__inherit__graph.md5  classIButton-members.html  classIButton.html  classIButton__coll__graph.map  classIButton__coll__graph.md5  classIButton__inherit__graph.map  classIButton__inherit__graph.md5  (+134 more)
.github/workflows/: ci.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  (+18 more)
src/: CMakeLists.txt  allocator.h  ip_filter.cpp  ip_filter.h  main.cpp  matrix.cpp  matrix.h  print_ip.h  template_traits_experiments.h
src/gof_patterns/: CMakeLists.txt
src/gof_patterns/observer/: observer.h
src/include/: allocator.h  factorial.h  sequence_queue.h
src/mvc_graphic_editor/: CMakeLists.txt
src/mvc_graphic_editor/controller/: button.cpp  button.h  controller_interface.h  logic.cpp  logic.h
src/mvc_graphic_editor/model/: db.cpp  db.h
src/mvc_graphic_editor/view/: ui.cpp  ui.h
test/: allocator_test.cpp  g_test_version.cpp  ip_filter_test.cpp  matrix_test.cpp
